# smart-home-cockpit

./: README.md  pyproject.toml
smart_home_cockpit/: InsertMeasureToDB.py  config.py  config.yaml  create_schema.sql  data3.json  filecreator.py  measurement.py  s3reader.py  s3uploader.py
tests/: test_smart_home_cockpit.py
