[tool.poetry]
name = "smart-home-cockpit"
version = "0.1.0"
description = ""
authors = ["Your Name <mbbigblue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.21.14"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
